tests/toylang/neg/001107_mutation.toylang
program a = { if a then var a : bool sleep; } .
